--- a/Phase2 - Project Framework/PT-Project.vcxproj.filters
+++ b/Phase2 - Project Framework/PT-Project.vcxproj.filters
@@ -145,6 +145,9 @@
       <Filter>Application Manager</Filter>
     </ClCompile>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Ccircle.cpp">
+      <Filter>Figures Classes</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CMUgraphicsLib\auxil.h">
@@ -232,6 +235,9 @@
       <Filter>Application Manager</Filter>
     </ClInclude>
     <ClInclude Include="DEFS.h" />
+    <ClInclude Include="Ccircle.h">
+      <Filter>Figures Classes</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="ClassDiagram.cd" />
